[gd_scene load_steps=11 format=3 uid="uid://dmek3vskirk8m"]

[ext_resource type="Theme" uid="uid://dylriqvd0gggf" path="res://game_main_theme.tres" id="1_0si0w"]
[ext_resource type="Script" uid="uid://c4yonen0o5du7" path="res://Scripts/UI/LevelFinishedUI.gd" id="1_dcscb"]
[ext_resource type="Resource" uid="uid://cqiq36am0bvm5" path="res://Resources/Item Drops/MainItemDropsEventBus.tres" id="2_67u4f"]
[ext_resource type="Resource" uid="uid://uwm4msfw6u3w" path="res://Resources/MainEventBus.tres" id="3_fkdm4"]
[ext_resource type="Shader" uid="uid://cs2wfah7vqy0g" path="res://Shaders/DiscretSunset.gdshader" id="3_m870y"]
[ext_resource type="Texture2D" uid="uid://26e06r7bs10" path="res://Textures/UI/CurrencyUI/Bitcoin_logo.png" id="4_ny3yf"]
[ext_resource type="PackedScene" uid="uid://gfx6r6lnobro" path="res://Scenes/UIComponents/AnimatedLabel.tscn" id="6_dq483"]
[ext_resource type="Texture2D" uid="uid://dtmnmdes7kt6v" path="res://Textures/UI/CurrencyUI/DollarSign.png" id="6_exueb"]
[ext_resource type="PackedScene" uid="uid://dajhetili8wxi" path="res://Scenes/UI/CustomButtonNew.tscn" id="8_custom"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bitcoin_celebration"]
shader = ExtResource("3_m870y")
shader_parameter/polar_coordinates = true
shader_parameter/polar_center = Vector2(0.5, 0.5)
shader_parameter/polar_zoom = 1.2
shader_parameter/polar_repeat = 8.0
shader_parameter/spin_rotation = 0.0
shader_parameter/spin_speed = 15.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.05, 0.05, 0.08, 1)
shader_parameter/colour_2 = Color(1, 0.843, 0, 0.4)
shader_parameter/colour_3 = Color(0.02, 0.02, 0.04, 1)
shader_parameter/contrast = 1.5
shader_parameter/spin_amount = 0.2
shader_parameter/pixel_filter = 500.0

[node name="LevelCompletedUI" type="Control"]
process_mode = 3
layout_direction = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dcscb")
item_drop_bus = ExtResource("2_67u4f")
main_event_bus = ExtResource("3_fkdm4")

[node name="OverlayBG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0si0w")
theme_type_variation = &"LvlCompletedOverlay"

[node name="MainContainer" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_bitcoin_celebration")
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0si0w")
theme_type_variation = &"LvlCompletedMain"

[node name="MarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TitleSection" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MainContainer/MarginContainer/VBoxContainer/TitleSection"]
layout_mode = 2
theme = ExtResource("1_0si0w")
theme_type_variation = &"LvlCompletedHSeparator"

[node name="Title" parent="MainContainer/MarginContainer/VBoxContainer/TitleSection" instance=ExtResource("6_dq483")]
unique_name_in_owner = true
custom_minimum_size = Vector2(790, 30)
layout_mode = 2
theme_type_variation = &"TitleText"
text = "MISSION COMPLETED!"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MainContainer/MarginContainer/VBoxContainer/TitleSection"]
layout_mode = 2
theme = ExtResource("1_0si0w")
theme_type_variation = &"LvlCompletedHSeparator"

[node name="RewardsSection" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="RewardsLabel" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection" instance=ExtResource("6_dq483")]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "REWARDS EARNED"

[node name="CurrencyPanel" type="PanelContainer" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_0si0w")
theme_type_variation = &"LvlCompletedCurrencyPanelBG"

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection/CurrencyPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection/CurrencyPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BTCContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection/CurrencyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="BTCIcon" type="TextureRect" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection/CurrencyPanel/MarginContainer/VBoxContainer/BTCContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_ny3yf")
stretch_mode = 5

[node name="BTCGainedLabel" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection/CurrencyPanel/MarginContainer/VBoxContainer/BTCContainer" instance=ExtResource("6_dq483")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "0.00000000 BTC"

[node name="HSeparator" type="HSeparator" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection/CurrencyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_0si0w")
theme_type_variation = &"LvlCompletedHSeparator"

[node name="FiatContainer" type="HBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection/CurrencyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="FiatIcon" type="TextureRect" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection/CurrencyPanel/MarginContainer/VBoxContainer/FiatContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_exueb")
stretch_mode = 5

[node name="FiatGainedLabel" parent="MainContainer/MarginContainer/VBoxContainer/RewardsSection/CurrencyPanel/MarginContainer/VBoxContainer/FiatContainer" instance=ExtResource("6_dq483")]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "$0.00"

[node name="ActionSection" type="VBoxContainer" parent="MainContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MainContainer/MarginContainer/VBoxContainer/ActionSection"]
layout_mode = 2
theme = ExtResource("1_0si0w")
theme_type_variation = &"LvlCompletedHSeparator"

[node name="MenuButton" parent="MainContainer/MarginContainer/VBoxContainer/ActionSection" instance=ExtResource("8_custom")]
layout_mode = 2
text = "RETURN TO MAIN MENU"

[connection signal="pressed" from="MainContainer/MarginContainer/VBoxContainer/ActionSection/MenuButton" to="." method="_on_menu_button_pressed"]
